--- a/GLHFTV/GLHFTV/GLVideosCollectionViewController.xib
+++ b/GLHFTV/GLHFTV/GLVideosCollectionViewController.xib
@@ -13,7 +13,7 @@
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
 			<string>IBUICollectionView</string>
-			<string>IBUICollectionViewLayout</string>
+			<string>IBUICollectionViewFlowLayout</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -46,8 +46,11 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<float key="IBUIMinimumZoomScale">0.0</float>
 				<float key="IBUIMaximumZoomScale">0.0</float>
-				<object class="IBUICollectionViewLayout" key="IBUICollectionViewLayout" id="56597256">
+				<object class="IBUICollectionViewFlowLayout" key="IBUICollectionViewLayout" id="237196652">
 					<reference key="IBUICollectionView" ref="923445700"/>
+					<string key="IBUIItemSize">{50, 50}</string>
+					<float key="IBUIMinimumLineSpacing">10</float>
+					<float key="IBUIMinimumInteritemSpacing">10</float>
 				</object>
 				<array key="IBUICells" id="0"/>
 			</object>
@@ -61,14 +64,6 @@
 						<reference key="destination" ref="923445700"/>
 					</object>
 					<int key="connectionID">14</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">videoCollectionLayout</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="56597256"/>
-					</object>
-					<int key="connectionID">16</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -110,13 +105,13 @@
 						<int key="objectID">3</int>
 						<reference key="object" ref="923445700"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="56597256"/>
+							<reference ref="237196652"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">15</int>
-						<reference key="object" ref="56597256"/>
+						<int key="objectID">17</int>
+						<reference key="object" ref="237196652"/>
 						<reference key="parent" ref="923445700"/>
 					</object>
 				</array>
@@ -126,15 +121,14 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="15.CustomClassName">GLDefaultVideoCollectionViewLayout</string>
-				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">16</int>
+			<int key="maxID">17</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -148,7 +142,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">GLVideosCollectionViewController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="superclassName">UICollectionViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="collectionView">UICollectionView</string>
 						<string key="videoCollectionLayout">GLDefaultVideoCollectionViewLayout</string>
@@ -166,6 +160,22 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/GLVideosCollectionViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UICollectionViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UICollectionViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UICollectionViewFlowLayout</string>
+					<string key="superclassName">UICollectionViewLayout</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UICollectionViewFlowLayout.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
